--- a/presentation/index.html
+++ b/presentation/index.html
@@ -282,36 +282,22 @@
                 </section>
 
                 <section>
-                    <p>JS is a scripting language</p>
-                    <p style="height:400px">&nbsp;</p>
-                </section>
-
-                <section class="codeblock">
-<pre ><code contenteditable>var mystring = "hej";
-print(mystring);
-</code></pre>
-                    <button class="btn btn-large eval">Submit</button>
-                    <p class="output"></p>
-                    <p style="height:400px">&nbsp;</p>
+                    <p>Basic Syntax</p>
                 </section>
 
 				<section>
-                    <h2>Basic Syntax</h2>
-
 					<h3>Data Types:</h3>
 					<ul>
 						<li>Strings</li>
 						<li>Numbers</li>
 						<li>Booleans</li>
 						<li>Arrays</li>
-						<li>HashMaps (Object)</li>
+						<li>Dictionaries</li>
 					</ul>
                     <p style="height:400px">&nbsp;</p>
                 </section>
 
-                <section>
-                    <p>Basic Syntax</p>
-                </section>
+
 
                 <section class="codeblock">
 <pre ><code contenteditable>var myString = "myString";
